@@ -1169,7 +1169,7 @@ and the width and height of the corners.
 \fBCircle\fP has a center coordinate and a coordinate for
 the outer edge.
 
-Use \fBArc\fP to circumscribe an arc within
+Use \fBArc\fP to inscribe an elliptical arc within
 a rectangle.  Arcs require a start and end point as well as the degree
 of rotation (e.g. 130,30 200,100 45,90).
 
