@@ -1,3 +1,7 @@
+2003-09-10  Glenn Randers-Pehrson <randeg@alum.rpi.edu>
+
+	* magick/render.c: Fixed handling of arc primitive (see IM-5.5.8).
+
 2003-09-10  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
 
 	* magick/blob.c (BlobMapModeToString): Only include this static
